--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gallery and form</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <main>
       <div class="container">
-        <ul>
-          <li><a href="./1-gallery.html">Gallery</a></li>
-          <li><a href="./2-form.html">Form</a></li>
-        </ul>
+        <ul class="gallery"></ul>
       </div>
     </main>
 
-    <!-- <script type="module" src="./js/main.js"></script> -->
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
